# Ganil2Root

./: CMakeLists.txt  LICENSE  ganil2root.sh
Core/: CMakeLists.txt  G2RCoreLinkDef.h  G2RDetectorFactory.cxx  G2RDetectorFactory.h  G2RDetectorManager.cxx  G2RDetectorManager.h  G2RModularLabel.cxx  G2RModularLabel.h  G2RTrigger.cxx  G2RTrigger.h  G2RVDetector.cxx  G2RVDetector.h
Detectors/: Makefile
Detectors/AnnularS1/: TS1.cxx  TS1.h
Detectors/CATS/: CMakeLists.txt  G2RCATS.cxx  G2RCATS.h  G2RCATSLinkDef.h  TCATS.cxx  TCATS.h
Detectors/Charissa/: TCharissa.cxx  TCharissa.h
Detectors/ChateauCristal/: TChateauCristal.cxx  TChateauCristal.h
Detectors/Chio/: TChio_an.cxx  TChio_an.h  TChio_dig.cxx  TChio_dig.h
Detectors/Exl/: CMakeLists.txt  G2RExl.cxx  G2RExl.h  G2RExlLinkDef.h  TExl.cxx  TExl.h
Detectors/Exogam/: TExogam.cxx  TExogam.h
Detectors/LaBr3/: TLaBr3.cxx  TLaBr3.h
Detectors/Lise/: TLise.cxx  TLise.h
Detectors/Maya/: TMaya.cxx  TMaya.h
Detectors/Must2/: CMakeLists.txt  G2RMust2.cxx  G2RMust2.h  G2RMust2LinkDef.h
Detectors/Plastic/: TPlastic.cxx  TPlastic.h
Detectors/SSSD/: TSSSD.cxx  TSSSD.h
Detectors/SiLi/: TSiLi.cxx  TSiLi.h
Detectors/SiRes/: TSiRes.cxx  TSiRes.h
Detectors/Speg/: TSpegCHIO.cxx  TSpegCHIO.h  TSpegDC.cxx  TSpegDC.h  TSpegPlastic.cxx  TSpegPlastic.h
Detectors/Tiara/: TTiaraBarrel.cxx  TTiaraBarrel.h  TTiaraHyball.cxx  TTiaraHyball.h
Detectors/Vamos/: TVamosCHIO.cxx  TVamosCHIO.h  TVamosDC.cxx  TVamosDC.h  TVamosFinger.cxx  TVamosFinger.h  TVamosPlastic.cxx  TVamosPlastic.h
Examples/ConvertSingle/: ConvertSingle.C  GUser.C  GUser.h
GRUscripts/: ACTIONS_local.CHC_PAR  ConvertSingleRunBasic.C  GUser_convert.h  GUser_onlineLC14LinkDef.h  GruScript3.C  spyOnline.C  testViGru.C
Misc/: G2REnvironment.bash  G2REnvironment.tcshrc  header_template  rootlogon.C
README/: CREDITS  HOWTO  INSTALL  README  ReleaseNotes-2.0.0.txt
examples/: ACTIONS_local.CHC_PAR  ACTIONS_local.CHC_STR  ConvertDirectory.C  ConvertDirectoryBasic.C  ConvertSingleRun.C  ConvertSingleRunBasic.C  GUser_convert.C  GUser_convert.h  GUser_online.C  GUser_online.h  GUser_onlineLC14.C  GUser_onlineLC14.h  Makefile  spyOnline.C  testViGru.C
libs/: Makefile  TCATS.cxx  TCATS.h  TCharissa.cxx  TCharissa.h  TChateauCristal.cxx  TChateauCristal.h  TChio_an.cxx  TChio_an.h  TChio_dig.cxx  TChio_dig.h  TDetector.cxx  TDetector.h  TDetectorManager.cxx  TDetectorManager.h  TExl.cxx  TExl.h  TExogam.cxx  TExogam.h  TLaBr3.cxx  TLaBr3.h  TLise.cxx  TLise.h  TLiseData.cxx  TLiseData.h  TMaya.cxx  TMaya.h  TModularLabel.cxx  TModularLabel.h  TMust2.cxx  TMust2.h  TPlastic.cxx  TPlastic.h  TS1.cxx  TS1.h  TSSSD.cxx  TSSSD.h  TSiLi.cxx  TSiLi.h  TSiRes.cxx  (+23 more)
ressources/CMake/: CMake_Preamble.cmake  Root.cmake
scripts/: Ganil2RootLogon.C  build_dict.sh
